--- a/practice.html
+++ b/practice.html
@@ -11,5 +11,7 @@
     ryfgyhfgn
     yujchn
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil amet architecto possimus exercitationem dolorum ratione officiis nisi debitis, enim ducimus facere cumque quos eum quas quam unde accusamus ea praesentium?git </p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, accusantium deserunt illum distinctio sunt ut, doloremque quae cupiditate laudantium totam, maxime ex repellat nulla praesentium quasi perferendis dolorem aperiam quaerat!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. At vitae eligendi et, optio porro alias, exercitationem quod saepe reiciendis quas placeat possimus cupiditate facere eaque eos maiores autem a delectus.git </p>
 </body>
 </html>
